# nextjs-python-computer-vision-kit

./: AGENTS.md  CONTRIBUTING.md  README.md  SECURITY.md  future-reference-feature.md  package.json  roadmap.md  soon.md  template-playbook.md
.github/: dependabot.yml  dependency-review-config.yml  labels.json  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: dependency-review.yml  license-report.yml  release-drafter.yml  release-smoke.yml  release.yml  sbom.yml  sync-labels.yml  template-ci.yml
backend/: README.md  pyproject.toml
backend/app/vision/: service.py
backend/tests/: helpers.py  test_health.py  test_inference_route.py  test_vision_service.py
docs/: sign-language-template.md  tooling.md
frontend/: package-lock.json  package.json
scripts/: check.mjs  report-licenses.mjs
