[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nextjs-python-computer-vision-kit-backend"
version = "0.1.0"
description = "FastAPI backend for the computer vision starter kit."
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "numpy>=2.1,<3.0",
  "opencv-python-headless>=4.10,<5.0",
  "pydantic-settings>=2.6,<3.0",
  "python-multipart>=0.0.12,<1.0",
  "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pip-licenses>=5.5,<6.0",
  "pytest>=8.3,<10.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
